language/move-prover/tests/sources/functional/ModifiesSchemaTest.exp
Move prover returns: exiting with boogie verification errors
error: caller does not have permission for this modify target

    ┌── tests/sources/functional/ModifiesSchemaTest.move:9:18 ───
    │
  9 │         modifies global<S>(addr);
    │                  ^^^^^^^^^^^^^^^
    ·
 12 │     public fun mutate_at(addr: address) acquires S {
    │                --------- called function
    │
    =     at tests/sources/functional/ModifiesSchemaTest.move:29:5: mutate_at_wrapper2
    =         addr1 = <redacted>,
    =         addr2 = <redacted>
    =     at tests/sources/functional/ModifiesSchemaTest.move:12:16: mutate_at
